<?xml version="1.0"?>
<package format="2">
  <name>pcd_processor</name>
  <version>0.0.0</version>
  <description>The pcd_processor package</description>

  <maintainer email="runqi_qiu@outlook.com">runqi_qiu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslib</depend>
  <depend>roscpp</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend> 
  <depend>grid_map_msgs</depend>  
  <depend>grid_map_core</depend>  
  <depend>grid_map_ros</depend>  
  <depend>grid_map_pcl</depend>  
  <depend>filters</depend>  
  <depend>grid_map_filters</depend>  
</package>